user.css
/* ... */
.main-playPauseButton-button svg {
    height: 20px;
    width: 21px;
}
/* progress bar moves smoothly */
.x-progressBar-fillColor {
    transition: transform 1s linear;
}
.progress-bar__slider {
    transition: left 1s linear;
}
.playback-progressbar-isInteractive .DuvrswZugGajIFNXObAr .x-progressBar-fillColor,
.playback-progressbar-isInteractive .DuvrswZugGajIFNXObAr .progress-bar__slider {
    transition: none;
}
/* connect bar */
.main-connectBar-connectBar {
    border-radius: 0;
}
/*
-------------------
MAIN VIEW
-------------------
*/
.Root__main-view {
    background: none !important;
}
[fade="bottom"] {
    -webkit-mask-image: linear-gradient(rgba(0, 0, 0, 1) 80%, transparent 100%);
}
[fade="top"] {
    -webkit-mask-image: linear-gradient(transparent 10%, rgba(0, 0, 0, 1) 30%);
}
[fade="full"] {
    -webkit-mask-image: linear-gradient(transparent 10%, rgba(0, 0, 0, 1) 30%, rgba(0, 0, 0, 1) 80%, transparent 100%);
}
.main-home-homeHeader {
    display: none;
}
.fSKBdxsPEB5WUAJWTYlh {
    background: transparent;
}
.main-trackList-playingIcon {
    -webkit-mask-image: url("data:image/svg+xml,%3Csvg id='playing-icon' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 22 24'%3E%3Cdefs%3E%3Cstyle%3E %23playing-icon %7B fill: %2320BC54; %7D @keyframes play %7B 0%25 %7Btransform: scaleY(1);%7D 3.3%25 %7Btransform: scaleY(0.9583);%7D 6.6%25 %7Btransform: scaleY(0.9166);%7D 9.9%25 %7Btransform: scaleY(0.8333);%7D 13.3%25 %7Btransform: scaleY(0.7083);%7D 16.6%25 %7Btransform: scaleY(0.5416);%7D 19.9%25 %7Btransform: scaleY(0.4166);%7D 23.3%25 %7Btransform: scaleY(0.25);%7D 26.6%25 %7Btransform: scaleY(0.1666);%7D 29.9%25 %7Btransform: scaleY(0.125);%7D 33.3%25 %7Btransform: scaleY(0.125);%7D 36.6%25 %7Btransform: scaleY(0.1666);%7D 39.9%25 %7Btransform: scaleY(0.1666);%7D 43.3%25 %7Btransform: scaleY(0.2083);%7D 46.6%25 %7Btransform: scaleY(0.2916);%7D 49.9%25 %7Btransform: scaleY(0.375);%7D 53.3%25 %7Btransform: scaleY(0.5);%7D 56.6%25 %7Btransform: scaleY(0.5833);%7D 59.9%25 %7Btransform: scaleY(0.625);%7D 63.3%25 %7Btransform: scaleY(0.6666);%7D 66.6%25 %7Btransform: scaleY(0.6666);%7D 69.9%25 %7Btransform: scaleY(0.6666);%7D 73.3%25 %7Btransform: scaleY(0.6666);%7D 76.6%25 %7Btransform: scaleY(0.7083);%7D 79.9%25 %7Btransform: scaleY(0.75);%7D 83.3%25 %7Btransform: scaleY(0.8333);%7D 86.6%25 %7Btransform: scaleY(0.875);%7D 89.9%25 %7Btransform: scaleY(0.9166);%7D 93.3%25 %7Btransform: scaleY(0.9583);%7D 96.6%25 %7Btransform: scaleY(1);%7D %7D %23bar1 %7B transform-origin: bottom; animation: play 0.9s -0.51s infinite; %7D %23bar2 %7B transform-origin: bottom; animation: play 0.9s infinite; %7D %23bar3 %7B transform-origin: bottom; animation: play 0.9s -0.15s infinite; %7D %23bar4 %7B transform-origin: bottom; animation: play 0.9s -0.75s infinite; %7D %3C/style%3E%3C/defs%3E%3Ctitle%3Eplaying-icon%3C/title%3E%3Crect id='bar1' class='cls-1' width='4' height='24'/%3E%3Crect id='bar2' class='cls-1' x='6' width='4' height='24'/%3E%3Crect id='bar3' class='cls-1' x='12' width='4' height='24'/%3E%3Crect id='bar4' class='cls-1' x='18' width='4' height='24'/%3E%3C/svg%3E");
    background: var(--spice-text);
    content-visibility: hidden;
    -webkit-mask-repeat: no-repeat;
}
.main-trackList-trackListRow:focus-within,
.main-trackList-trackListRow:hover {
    background: linear-gradient(
        90deg,
        transparent 0%,
        rgba(var(--spice-rgb-selected-row), 0.07) 30%,
        rgba(var(--spice-rgb-selected-row), 0.07) 60%,
        transparent 100%
    );
}
.main-trackList-trackListRow.main-trackList-selected,
.main-trackList-trackListRow.main-trackList-selected:hover {
    background: linear-gradient(
        90deg,
        transparent 0%,
        rgba(var(--spice-rgb-selected-row), 0.07) 30%,
        rgba(var(--spice-rgb-selected-row), 0.07) 60%,
        transparent 100%
    );
}
.main-card-card .main-cardImage-imageWrapper {
    transition: transform 0.35s ease;
    transform-origin: 50% -40px;
    overflow: hidden;
}
.main-card-card:hover .main-cardImage-imageWrapper {
    transform: perspective(75em) rotateX(20deg);
}
.main-card-card {
    background: rgba(0, 0, 0, 0.3) !important;
}
.view-homeShortcutsGrid-shortcut {
    background: rgba(0, 0, 0, 0.3) !important;
}
.main-card-imageContainer .main-cardImage-imageWrapper::after {
    content: "";
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: rgba(255, 255, 255, 0.1);
    transform: rotate(45deg) translate(0px, -90%);
    transition: all 0.3s ease-out;
    filter: blur(4px);
}
.main-card-card:hover .main-card-imageContainer .main-cardImage-imageWrapper::after {
    transform: rotate(45deg) translate(0px, -70%);
    filter: blur(6px);
}
/*
-------------------
SEARCH PAGE
-------------------
*/
.fVB_YDdnaDlztX7CcWTA,
.search-searchCategory-SearchCategory {
    background: none !important;
}
[fade="top"] .search-searchCategory-SearchCategory,
[fade="full"] .search-searchCategory-SearchCategory {
    visibility: hidden;
}
span.x-searchInput-searchInputSearchIcon {
    color: rgba(var(--spice-rgb-text), 0.7);
}
.main-topBar-searchBar:hover span.x-searchInput-searchInputSearchIcon {
    color: var(--spice-text);
}
/* stop "top result" text and search results cards from intersecting with search options */
.Root__main-view:nth-child(5) .main-gridContainer-gridContainer.search-searchResult-searchResultGrid,
.Root__main-view:nth-child(5) .bCoyoXohuLs0f6urF2PD {
    margin-top: 76px;
}
/* search bar x button */
.x-searchInput-searchInputClearButton {
    color: rgba(var(--spice-rgb-text), 0.7);
}
.x-searchInput-searchInputClearButton:hover {
    color: var(--spice-rgb-text);
}
/* style search options  */
span.ChipInner__ChipInnerComponent-sc-1ly6j4j-0 {
    background-color: rgba(var(--spice-rgb-shadow), 0.7);
    height: 32px;
    border-radius: 8px;
    display: flex;
    align-items: center;
    color: rgba(var(--spice-rgb-text), 0.7);
}
/* ... */

